Wed Jan 11 17:53:26 1995  Rob Savoye  <rob@darkstar.cygnus.com>

	* array-rom.c: Add support for most commands.
	
	* monitor.c: Add GDB remote protocol for the hybrid environment on
	the Array board. 

Wed Jan 11 00:44:01 1995  Jeff Law  (law@snake.cs.utah.edu)

	* command.c (show_user_1): Use print_command_line to show a user
	defined command (including control structures).

	* top.c (init_main): Change documentation for user defined
	commands to indicate they may accept up to ten arguments.

Tue Jan 10 16:22:41 1995  Jim Kingdon  <kingdon@lioth.cygnus.com>

	* mips-tdep.c (mips_skip_prologue): Accept or as well as addu for
	`move $s8, $sp' instruction.

Sun Jan  8 12:45:34 1995  Jim Kingdon  <kingdon@deneb.cygnus.com>

	* target.c, target.h (target_signal_from_command): New function.
	* infrun.c (handle_command, signals_info), infcmd.c
	(signal_command): Use it.
	* infrun.c, infcmd.c: Update docstrings for these commands.

	* target.h (enum target_signal), target.c (signals), target.c
	(target_signal_from_host, target_signal_to_host): Add
	TARGET_SIGNAL_REALTIME_* and TARGET_SIGNAL_PRIO for lynx.
	* config/tm-lynx.h: Define signal numbers for realtime events.

Sat Jan  7 07:23:53 1995  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* dbxread.c (process_one_symbol):  Handle N_FUN symbols
	for Sun acc 3.0 under SunOS4.

	Changes to improve handling of runtime common symbols
	under SunOS4.
	* minsyms.c (get_symbol_leading_char):  New routine to determine
	the leading symbol character for an objfile.
	(prim_record_minimal_symbol_and_info, install_minimal_symbols):
	Use it.
	* objfiles.h (rt_common_objfile):  New global, points to objfile
	containing the runtime common minimal symbols.
	* objfiles.c (free_objfile):  Mark rt_common_objfile as
	unallocated before freeing it.
	* solib.c (allocate_rt_common_objfile):  New routine to allocate
	an objfile for the runtime common minimal symbols.
	(solib_add_common_symbols):  Allocate an objfile for the runtime