@@ -1,3 +1,8 @@
+Wed Jan 11 17:06:55 1995  Stu Grossman  (grossman@cygnus.com)
+
+	* gdbtk.c (gdbtk_init):  Improve handling for errors in gdbtk.tcl
+	during startup.
+
 Wed Jan 11 17:53:26 1995  Rob Savoye  <rob@darkstar.cygnus.com>
 
 	* array-rom.c: Add support for most commands.
